--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button onclick="calculateTan()">tan</button>
         </div>
     </div>
-    <div class="footer">Made by Kartik and Charan</div>
+    <div class="footer">Made by Kartik</div>
     <script src="script.js"></script>
 </body>
 </html>
